# room_matching

./: .gitignore  README.md  Room Matching API.postman_collection.json  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_acda15ef11193946___init___py.html  z_acda15ef11193946_app_py.html  z_acda15ef11193946_common_py.html  z_acda15ef11193946_data_processing_py.html  z_acda15ef11193946_model_creation_py.html  z_acda15ef11193946_predict_py.html  z_acda15ef11193946_synthetic_data_py.html
notebooks/: create_model_in_mlflow.ipynb  hyperparameter_tuning_lgbm.ipynb  model_creation.ipynb
rooms/: app.py  common.py  constants_config.py  data_processing.py  main.py  model_creation.py  predict.py  synthetic_data.py
test/: test_data_processing.py  test_integration.py  test_model_creation.py  test_synthetic_data.py
