[tool.poetry]
name = "rooms"
version = "1"
description = "Room matching assignment"
authors = ["Víctor García <gcvictorgc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
jellyfish = "^1.1.3"
sentence-transformers = "^3.3.1"
jupyterlab = "^4.3.4"
mlflow = "^2.19.0"
lightgbm = "^4.5.0"
loguru = "^0.7.3"
flask = "^3.1.0"
faker = "^33.1.0"
pytest = "^8.3.4"
tensorflow = "^2.18.0"
tf-keras = "^2.18.0"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
